welcome.lessons.welcome.loopdowhile.Poucet.scala.code
nbBiscuit: Int =0

for(i<- 1 to 5){
	avance();
	nbBiscuit: Int =0
	if(estSurBiscuit==true){
		nbBiscuit = nbBiscuit + 1;
	}
	if(nbBiscuit < 2 ){
		droite();
	}
	if(nbBiscuit > 3){
		gauche();
	}
}
